Update jextract to reflect latest API changes
Reviewed-by: jvernee