@@ -40,10 +40,10 @@ import static java.lang.foreign.ValueLayout.*;
 public interface CXCursorVisitor {
 
     int apply(java.lang.foreign.MemorySegment cursor, java.lang.foreign.MemorySegment parent, java.lang.foreign.MemorySegment client_data);
-    static MemorySegment allocate(CXCursorVisitor fi, SegmentScope scope) {
+    static MemorySegment allocate(CXCursorVisitor fi, Arena scope) {
         return RuntimeHelper.upcallStub(CXCursorVisitor.class, fi, constants$13.CXCursorVisitor$FUNC, scope);
     }
-    static CXCursorVisitor ofAddress(MemorySegment addr, SegmentScope scope) {
+    static CXCursorVisitor ofAddress(MemorySegment addr, Arena scope) {
         MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
         return (java.lang.foreign.MemorySegment _cursor, java.lang.foreign.MemorySegment _parent, java.lang.foreign.MemorySegment _client_data) -> {
             try {
